# Dec18-Plugin-Manager

./: .gitignore  PLUGIN_MANAGER_DEVELOPMENT_NOTES.md  README.md  index.html  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build-plugin-manager.yml  deploy-plugin-manager-pages.yml  license-fulfillment.yml  probe-orders.yml
docs/: ADDING-PLUGINS-GUIDE.md  LOCAL_TESTING.md
docs/plugins/: index.json
docs/plugins/dolby-vision-spoofer-dctl/: manager-release-config.json  stable.json
docs/plugins/film-negative-space-cst-dctl/: manager-release-config.json  stable.json
docs/plugins/grain-by-greg-dctl/: manager-release-config.json  stable.json
docs/plugins/hue-contrast-compressor-dctl/: manager-release-config.json  stable.json
docs/plugins/hue-contrast-compressor-ofx/: stable.json  (+1 more)
docs/release-notes/: manager-0.1.0.html
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  installer.rs  lib.rs  license.rs  main.rs  models.rs  settings.rs
tools/: backfill-ledger.mjs  fulfill-licenses.mjs  generate-license-key.mjs  generate-plugin-channel-manifests.mjs  generate-updater-feed.mjs  license-crypto.mjs  license-keygen.mjs  license-manager.html  license-server.mjs  setup-plugin-repos.sh  setup-remaining-repos.sh  test-send-key.mjs
tools/download-proxy/: deploy.sh  worker.js  wrangler.toml
tools/fixtures/: photochemist-releases.sample.json
tools/license-keys/: processed-subscribers.json  public.b64  public.pem
(+20 files in other folders)
